# coodie

./: .gitignore  README.md  package-lock.json
server/: .dockerignore  .gitignore  Dockerfile  Procfile  fly.toml  makefile  pyproject.toml  railway.json  settings.toml  setup.cfg
server/src/: app.py  config.py  configs.py  settings.toml
server/src/configs/: settings.py
server/src/controllers/: auth_controller.py  job_controller.py  token_controller.py  user_controller.py
server/src/db/: config.py
server/src/models/: enterprise.py  job.py  token.py
server/src/routes/: auth_routes.py  enterprise_routes.py  job_routes.py  login_routes.py  user_router.py
server/src/schemas/: enterprise_schema.py  job_schema.py  user_schema.py
server/src/tests/: conftest.py
server/src/tests/integration/routes/: test_auth_routes.py  test_job_route.py  test_job_routes.py  test_user_routes.py
server/src/tests/unit/controllers/: test_job_controller.py  test_token_controller.py  test_user_controller.py
server/src/tests/unit/models/: test_job_model.py
server/src/utils/: bcrypt.py
server/tests/integration/routes/: test_job_route.py
server/tests/unit/models/: test_job_model.py
web/: .env  netlify.toml  next.config.js  package-lock.json  package.json  pnpm-lock.yaml
web/app/: global.css  layout.tsx  page.tsx
web/app/components/: Avatar.tsx  EnterpriseJobDetails.tsx  ErrorPopup.tsx  GreenButton.tsx  JobBox.tsx  Navbar.tsx
web/app/constants/: index.ts
web/app/enterprise/add-new-job/: page.tsx
web/app/enterprise/timeline/: page.tsx
web/app/login/: page.tsx
web/app/types/: next-auth.d.ts
web/pages/api/auth/: [...nextauth].ts
web/src/app/: layout.tsx  page.tsx
web/src/app/components/: EnterpriseJobDetails.tsx  EnterpriseTimeline.tsx  (+7 more)
(+5 files in other folders)
